fix plugin_manager to load DH